--- a/wp-content/plugins/crypto-price-plugin/includes/assets/css/crypto-price.css
+++ b/wp-content/plugins/crypto-price-plugin/includes/assets/css/crypto-price.css
@@ -13,3 +13,10 @@
     transition: width 0.4s ease;
 }
 
+.price-change.positive {
+    color: green;
+}
+
+.price-change.negative {
+    color: red;
+}
